@@ -111,6 +111,7 @@ class PageGtk(PageBase):
             self.partition_list_buttonbox = builder.get_object('partition_list_buttonbox')
             self.part_advanced_recalculating_box = builder.get_object('part_advanced_recalculating_box')
             self.part_advanced_recalculating_spinner = builder.get_object('part_advanced_recalculating_spinner')
+            self.part_advanced_recalculating_label = builder.get_object('part_advanced_recalculating_label')
 
             self.partition_bars = {}
             self.segmented_bar_vbox = None
@@ -160,6 +161,9 @@ class PageGtk(PageBase):
         self.partition_list_buttonbox.set_sensitive(False)
         self.part_advanced_recalculating_box.show()
         self.part_advanced_recalculating_spinner.start()
+
+    def progress_info(self, progress_info):
+        self.part_advanced_recalculating_label.set_text(progress_info)
     
     def progress_stop(self, *args):
         self.partition_list_buttonbox.set_sensitive(True)
@@ -1762,6 +1766,9 @@ class Page(Plugin):
                         }
 
                     drop_privileges()
+                    # We want to immediately show the UI.
+                    self.ui.current_page = self.ui.page_advanced
+                    self.frontend.set_page(NAME)
                     self.progress_start(0, len(self.update_partitions),
                         self.description('partman/progress/init/parted'))
                     self.debug('Partman: update_partitions = %s',
@@ -1789,7 +1796,6 @@ class Page(Plugin):
                         self.update_partitions = None
                         self.building_cache = False
                         self.progress_stop()
-                        self.ui.current_page = self.ui.page_advanced
                         self.ui.update_partman(
                             self.disk_cache, self.partition_cache,
                             self.cache_order)
@@ -2303,6 +2309,18 @@ class Page(Plugin):
             self.ui.progress_start(*args)
         else:
             Plugin.progress_start(self, *args)
+
+    def progress_info(self, progress_title, progress_info):
+        if hasattr(self.ui, 'progress_info'):
+            try:
+                self.ui.progress_info(self.description(progress_info))
+            except debconf.DebconfError:
+                pass
+            # We provide no means of cancelling the progress message,
+            # so always return True.
+            return True
+        else:
+            Plugin.progress_info(self, progress_title, progress_info)
 
     def progress_stop(self, *args):
         if hasattr(self.ui, 'progress_stop'):
